# sambo

./: .gitignore  Caddyfile  Dockerfile  compose.yml  init-user-db.sh  manage.py  prod.env.enc  pyproject.toml  sambo.code-workspace
.github/workflows/: build.yml  main.yml
sambo/: admin.py  components.py  honeypot.py  models.py  urls.py  views.py
sambo/expense/: admin.py  components.py  converters.py  formatters.py  forms.py  models.py  urls.py  views.py
sambo/expense/migrations/: 0001_initial.py  0002_alter_expense_settled_at.py  0003_expense_spent_by.py
sambo/migrations/: 0001_initial.py
sambo/settings/: __init__.py  dev.py  prod.py
sambo/share/: admin.py  components.py  models.py  urls.py  views.py
sambo/share/migrations/: 0001_initial.py
sambo/static/: script.js  styles.css
sambo/static/expense/: styles.css
sambo/static/share/: script.js  styles.css
sambo/static/todo/: styles.css
sambo/todo/: admin.py  components.py  forms.py  models.py  urls.py  views.py
sambo/todo/migrations/: 0001_initial.py
